--- a/src/components/banner-brand/Brand.astro
+++ b/src/components/banner-brand/Brand.astro
@@ -40,7 +40,7 @@ const brands = [
 
 
 <div class="bg-white py-24 sm:py-32">
-  <div class="container mx-auto px-6 lg:px-8">
+  <div class="max-w-7xl mx-auto px-6 lg:px-8">
     <h2 class="text-center font-semibold text-black text-2xl sm:text-4xl">Nuestros Partners</h2>
     <div class="mx-auto mt-10 grid grid-cols-2 items-center gap-x-4 gap-y-10 sm:grid-cols-5 lg:grid-cols-5">
     
