--- a/src/components/navbar/Navbar.astro
+++ b/src/components/navbar/Navbar.astro
@@ -27,7 +27,7 @@ const navLinks = [
 ---
 
 <nav class="bg-white shadow-sm fixed w-full top-0 z-50">
-  <div class="relative container mx-auto">
+  <div class="relative container mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between items-center h-16">
       <!-- Logo (Always on the left) -->
       <div class="flex-shrink-0">
