--- a/src/pages/vehiculos/[name].astro
+++ b/src/pages/vehiculos/[name].astro
@@ -42,7 +42,7 @@ const vehicleImages = vehicle.imageGallery && vehicle.imageGallery.length > 0
   <!-- Breadcrumb -->
 
 
-  <main class="container mx-auto py-[80px] md:py-[120px] px-10">
+  <main class="container mx-auto py-[80px] md:py-[120px] px-5 md:px-10">
 
      <nav class="text-sm text-gray-600 py-3">
         <a href="/" class="hover:text-blue-600">Inicio</a>
