--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,9 +7,10 @@ import '../styles/global.css';
 export interface Props {
 	title?: string;
 	description?: string;
+	image?: string; // Optional image for Open Graph
 }
 
-const { title = "Autoloa - automotora", description = "Automotora especializada en vehículos 4x4" } = Astro.props;
+const { title = "Autoloa - automotora", description = "Automotora especializada en vehículos 4x4", image="/frontis-autoloa.webp" } = Astro.props;
 ---
 
 <!doctype html>
@@ -20,6 +21,7 @@ const { title = "Autoloa - automotora", description = "Automotora especializada 
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content={description} />
+		<meta property="og:image" content={image} />
 		<title>{title}</title>
 		<!-- Font Awesome CDN -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
