--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 const keyHcaptcha = import.meta.env.HCAPTCHA_SITE_KEY;
 ---
 
-<Layout title="Contacto - Estamos aquí para ayudarte con todas tus necesidades de vehículos 4x4" description="Estamos aquí para ayudarte con todas tus necesidades de vehículos 4x4">
+<Layout title="Contacto - Estamos aquí para ayudarte con todas tus necesidades de vehículos 4x4" description="Estamos aquí para ayudarte con todas tus necesidades de vehículos 4x4" image="/frontis-autoloa.webp">
   <!-- Hero Section -->
   <section class="bg-gradient-to-br from-gray-900 via-black to-gray-800 py-20 px-4">
     <div class="max-w-7xl mx-auto text-center">
