--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import {FeaturedCars} from '../components/featured-cars/FeaturedCars';
 
 ---
 
-<Layout title="AutoLoa - Tu automotora de confianza" description="Compra y vende vehículos 4x4 con confianza y seguridad. Descubre nuestro catálogo y contáctanos para más información.">
+<Layout title="AutoLoa - Tu automotora de confianza" description="Compra y vende vehículos 4x4 con confianza y seguridad. Descubre nuestro catálogo y contáctanos para más información." image='/frontis-autoloa.webp'>
 	<Hero client:load/>
 	<FeaturedCars client:load />
 	<TextImage 
