--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Nosotros - AutoLoa">
+<Layout title="Nosotros - AutoLoa" description="Conoce más sobre AutoLoa, tu automotora de confianza especializada en vehículos 4x4" image="/frontis-autoloa.webp">
 
 
   <!-- Nuestra Historia -->
