--- a/src/pages/catalogo.astro
+++ b/src/pages/catalogo.astro
@@ -4,7 +4,7 @@ import {Catalogo as CatalogoComponent} from '../components/catalogo/Catalogo';
 import "../styles/global.css";
 
 ---
-<Layout title="Catálogo - Somos Expertos en vehículos 4x4" description="Catálogo de vehículos 4x4">
+<Layout title="Catálogo - Somos Expertos en vehículos 4x4" description="Catálogo de vehículos 4x4" image="/frontis-autoloa.webp">
   <main>
       <CatalogoComponent client:load />
   </main>
