feat: add sitemap integration and update layout descriptions

--- a/src/pages/vehiculos/[name].astro
+++ b/src/pages/vehiculos/[name].astro
@@ -113,7 +113,7 @@ const vehicleImages = vehicle.imageGallery && vehicle.imageGallery.length > 0
               <img 
                 id="main-image"
                 src={vehicleImages[0]} 
-                alt={`${vehicle.name} - Imagen principal`}
+                alt={`${vehicle.name} - Auto Loa`}
                 class="w-full h-full object-cover rounded-lg cursor-zoom-in transition-transform duration-300"
               />
               
