--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,7 +48,7 @@ console.log(`API Base URL: ${apiBaseUrl}`);
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content={description} />
-		<meta property="og:image" content={`${apiBaseUrl}/api/og/${imageFilename}`} />
+		<meta property="og:image" itemprop="image" content={`${apiBaseUrl}/api/og/${imageFilename}`} />
 		<meta property="og:image:width" content="1200">
 		<meta property="og:image:height" content="630">
 		<meta property="og:image:type" content="image/jpeg">
